# Mini-Oops

./: .gitignore  .travis.yml  Mini-Oops.workspace  Oopsilon.sln  Oopsilon.workspace  README.md  VM_F.workspace  appveyor.yml  manual_translation.txt  thoughts.md
Doc/: Nightly.md  Objects.md
Doc/Design/: Klass.vsdx  Metaclass.vsdx
Doc/Implementation Diaries/: Blocks.md  Diaries.md  Parallel.md
Doc/Templates/: Cpyright.h.tpl
doc/: Nightly.md  new.md
doc/Design/: Block.vsdx  Classes.vsdx  Metaclass.vsdx
doc/Implementation Diaries/: Passes.md  Propagation.md  Types 2.txt  Types 2019.md  Types.md  types 3.md  types.vsdx
doc/RedBook/: conf.py  index.rst  preface.rst
doc/RedBook/_static/: theme_overrides.css
doc/RedBook/sec-i/: critical.rst  history.rst
doc/RedBook/sec-ii/: objects.rst
doc/RedBook/sec-iv/: formal-types.rst  grammar.rst
src/: CFL.project  CMakeLists.txt  Oopsilon.vcxproj  Oopsilon.vcxproj.filters  VM_F.project
src/LibOops/hdr/oops-cxx/: Object.h  cxxgen.h  optional.h
src/LibOops/hdr/oops-platform/: cast.h  endpack.h  misc.h  packstrc.h
src/LibOops/oops-platform/: misc.cxx
src/OopsFoundation/: Entry.oop  Package.oop
src/OopsFoundation/Runtime/: Object.oop
src/cmd/: CMakeLists.txt
src/cmd/Classgen/: AST.cxx  AST.h  CMakeLists.txt  Classgen.cxx  Classgen.h  gram.y  scan.l
src/cmd/LGen/: CMakeLists.txt  lemon.cxx
src/cmd/LemonGen/: CMakeLists.txt
src/cmd/Quickgen/: AST.cxx  AST.h  CMakeLists.txt  Quickgen.cxx  Quickgen.h  gram.y  scan.l
src/cmd/VMkernel/: CMakeLists.txt  QuickgenSupport.h  VMkernel.cxx  VMkernel.h
src/cmd/VMkernel/Bcom/: AST.cxx  AST.h  Class.cxx  Context.cxx  Context.h  Defs.h  Encoder.cxx  Encoder.h  Expressions.h  MsgSyntax.cxx  MsgSyntax.h  State.cxx  State.h  Symbol.cxx  Variable.h  gram.y  scan.l
src/cmd/VMkernel/Bcom/Compiler/: Code.cxx  Context.cxx  Variable.h
src/cmd/VMkernel/Bytecode/: Bytecode.cxx  Bytecode.h  Syscall.h
src/cmd/VMkernel/MLIR/: MLIR.h
src/cmd/VMkernel/ObjectMemory/: ObjectFactory.cxx  ObjectFactory.h  ObjectFactory.inl.h  ObjectMemory.cxx  ObjectMemory.h  Oop.h
src/cmd/VMkernel/Oops/: ClassDesc.cxx  ClassDesc.h  Context.cls  ContextDesc.h  Desc.cxx  Desc.h  Hierarchy.h  Method.cls  MethodDesc.h  Symbol.cxx  VecDesc.h
src/cmd/VMkernel/Oops/Klass/: ByteVecKlass.cxx  ByteVecKlass.h  ClassKlass.h  ContextKlass.cxx  ContextKlass.h  Klass.cxx  Klass.h  MemKlass.h  MethodKlass.cxx  MethodKlass.h  ObjVecKlass.h  SymbolKlass.h
src/cmd/VMkernel/VM/: QuickSilver.qvm  QuickgenSupport.h  Syscall.h  VM.cxx  VM.h
src/cmd/VMkernel/VM/Interpreter/: Interpreter.cxx  Interpreter.h  QuickSilver.qvm
src/cmd/c-oopsC/: CMakeLists.txt  oopsc.cxx  oopsc.h
src/cmd/c-oopsC/Anco/: Context.cxx  Context.h  Denot.h  Environment.h
src/cmd/c-oopsC/front/: Bcom.cxx  Bcom.h  gram.y  msgUnpacking.cxx  msgUnpacking.h  scan.l  state.cxx  state.h
src/cmd/c-oopsC/front/ast/: ast.cxx  ast.h  astPrinter.cxx  astPrinter.h  class.h  clsProto.h  expr.h  field.cxx  field.h  methBlk.h  method.h  protocol.h  symbol.cxx  typeRepr.h  visitor.cxx  visitor.h
src/cmd/lemon/: CMakeLists.txt  lempar.tpl.cxx
src/cmd/oopsc/: CMakeLists.txt  oopsc.cxx  oopsc.h
src/cmd/oopsc/ANSYN/: MsgSyntax.h  State.cxx  State.h  gram.y  scan.l
src/cmd/oopsc/AST/: AST.cxx  AST.h  ClassDef.h  Program.h  Symbol.cxx  Symbol.h
src/cmd/oopsc/Bytecode/: Bytecode.h
src/cmd/oopsc/Memory/: Oop.h  Tag.h
src/cmd/oopsc/ObjectMemory/: ObjectFactory.h  ObjectFactory.inl.h  ObjectMemory.cxx  ObjectMemory.h  Oop.h
src/cmd/oopsc/Oops/: ClassDesc.h  ClassOop.h  Context.h  ContextDesc.h  Desc.cxx  Desc.h  Hierarchy.h  MemDesc.h  MemOop.h  Method.h  MethodDesc.h  ObjVecDesc.h  Oop.h  SmiDesc.h  SmiOop.h  Symbol.cxx  SymbolDesc.h  VecDesc.h  VecOop.h  smiOop.h
src/cmd/oopsc/Oops/Klass/: ByteVecKlass.h  ClassKlass.cxx  ClassKlass.h  Klass.cxx  Klass.h  MemKlass.h  ObjVecKlass.h  ObjVecKlass.inl.h  SmiKlass.h  SymbolKlass.cxx  SymbolKlass.h  VecKlass.h
src/cmd/oopsc/VM/: VM.cxx  VM.h
src/doc/: classes.m4
src/hdr/oops-cxx/: cxxgen.h  endpack.h  optional.h
src/hdr/oops-object/: object.h
src/hdr/oops-platform/: basic-defs.h  cxx.h
src/lib/: CMakeLists.txt
src/lib/OopsFoundation/: Entry.oop  Package.oop
src/lib/OopsFoundation/Runtime/: Hierarchy.oop  Object.oop
src/lib/oops/: CMakeLists.txt
src/lib/oops/hdr/oops-cxx/: Object.h  packstrc.h
src/lib/oops/hdr/oops-object/: object.h
src/lib/oops/hdr/oops-platform/: basic-defs.h  compats.hhh  cxx.h
src/lib/oopsrt/: CMakeLists.txt
src/oops/: Package.oop
src/oops/Runtime/: Object.oop
src/tools/: FormatSrc.sh  Nightly.sh  WinBuild.bat
src/tools/doctools/: clsdiagr.m4
test/OopsC/type_basics/: Package.oop
test/OopsC/type_params/: Package.oop
